@@ -52,19 +52,13 @@ abstract class Unused
 
     public void setArray(int i, Array x)
         throws SQLException { throw unused(); }
-    public void setAsciiStream(int parameterIndex, InputStream x, int length)
-        throws SQLException { throw unused(); }
 //    public void setBigDecimal(int parameterIndex, BigDecimal x)
 //        throws SQLException { throw unused(); }
-    public void setBinaryStream(int parameterIndex, InputStream x, int length)
-        throws SQLException { throw unused(); }
     public void setBlob(int i, Blob x)
         throws SQLException { throw unused(); }
     public void setClob(int i, Clob x)
         throws SQLException { throw unused(); }
     public void setRef(int i, Ref x)
-        throws SQLException { throw unused(); }
-    public void setUnicodeStream(int pos, InputStream x, int length)
         throws SQLException { throw unused(); }
     public void setURL(int pos, URL x)
         throws SQLException { throw unused(); }
